# ParticleFactory

./: CMakeLists.txt  ParticleFactory.pro  README.md
include/: Emitter.h  NGLScene.h  Particle.h  ParticleFactory.h  ParticleTypeinfo.h  Sphere.h  Teapot.h  Torus.h  Troll.h
shaders/: PhongFragment.glsl  PhongVertex.glsl
src/: Emitter.cpp  NGLScene.cpp  Particle.cpp  ParticleFactory.cpp  Sphere.cpp  Teapot.cpp  Torus.cpp  Troll.cpp
